// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Topbar > renders citations view (no mode tabs, no focus toggle) 1`] = `
<div>
  <header
    class="flex h-10 shrink-0 items-center gap-4 border-b border-rule bg-paper px-4"
  >
    <div
      class="flex items-center gap-1 font-mono text-[11px] uppercase tracking-wider text-ink-3"
    >
      <span>
        Test
      </span>
    </div>
    <div
      class="flex-1"
    />
    <a
      class="inline-flex items-center gap-1.5 rounded-md px-2 py-1 font-mono text-[10px] uppercase tracking-wider hover:bg-paper-2 text-ink"
      data-discover="true"
      href="/s/s1/citations"
    >
      <svg
        class="lucide lucide-quote h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
        />
        <path
          d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
        />
      </svg>
      Citations
    </a>
    <button
      aria-label="Toggle theme"
      class="inline-flex h-7 w-7 items-center justify-center rounded-md text-ink-3 hover:bg-paper-2 hover:text-ink"
      title="Toggle theme"
      type="button"
    >
      <svg
        class="lucide lucide-moon h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"
        />
      </svg>
    </button>
  </header>
</div>
`;

exports[`Topbar > renders with doc name, mode tabs and theme toggle 1`] = `
<div>
  <header
    class="flex h-10 shrink-0 items-center gap-4 border-b border-rule bg-paper px-4"
  >
    <div
      class="flex items-center gap-1 font-mono text-[11px] uppercase tracking-wider text-ink-3"
    >
      <span>
        Test
      </span>
      <span
        class="text-ink-4"
      >
        /
      </span>
      <span
        class="text-ink"
      >
        Sample
      </span>
    </div>
    <div
      class="flex-1"
    />
    <nav
      class="inline-flex items-center gap-4 font-mono text-[11px]"
    >
      <a
        class="pb-0.5 transition-colors border-b border-ink font-medium text-ink"
        data-discover="true"
        href="/s/s1/d/d1"
      >
        write
      </a>
      <a
        class="pb-0.5 transition-colors text-ink-4 hover:text-ink-2"
        data-discover="true"
        href="/s/s1/d/d1/read"
      >
        read
      </a>
      <a
        class="pb-0.5 transition-colors text-ink-4 hover:text-ink-2"
        data-discover="true"
        href="/s/s1/d/d1/split"
      >
        split
      </a>
      <a
        class="pb-0.5 transition-colors text-ink-4 hover:text-ink-2"
        data-discover="true"
        href="/s/s1/dump"
      >
        dump
      </a>
    </nav>
    <a
      class="inline-flex items-center gap-1.5 rounded-md px-2 py-1 font-mono text-[10px] uppercase tracking-wider hover:bg-paper-2 text-ink-3"
      data-discover="true"
      href="/s/s1/citations"
    >
      <svg
        class="lucide lucide-quote h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
        />
        <path
          d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
        />
      </svg>
      Citations
    </a>
    <a
      aria-label="Enter focus mode"
      class="inline-flex items-center gap-1.5 rounded-md px-2 py-1 font-mono text-[10px] uppercase tracking-wider text-ink-3 hover:bg-paper-2 hover:text-ink"
      data-discover="true"
      href="/s/s1/d/d1?focus=1"
      title="Focus (⌘\\)"
    >
      <svg
        class="lucide lucide-maximize2 h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="15 3 21 3 21 9"
        />
        <polyline
          points="9 21 3 21 3 15"
        />
        <line
          x1="21"
          x2="14"
          y1="3"
          y2="10"
        />
        <line
          x1="3"
          x2="10"
          y1="21"
          y2="14"
        />
      </svg>
      FOCUS
    </a>
    <button
      aria-label="Toggle theme"
      class="inline-flex h-7 w-7 items-center justify-center rounded-md text-ink-3 hover:bg-paper-2 hover:text-ink"
      title="Toggle theme"
      type="button"
    >
      <svg
        class="lucide lucide-moon h-3.5 w-3.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"
        />
      </svg>
    </button>
  </header>
</div>
`;
